--- a/div.html
+++ b/div.html
@@ -1,1 +1,59 @@
-<!DOCSHEET>
+<!DOCTYPE html>
+<html>
+<head>
+<title> My Web page! </title>
+<style>
+#container{
+border:3px solid blue;
+font-family:arial ,sans-serif;
+font-size:28px;
+font-weight:bold;
+background-color:teal;
+width:600px;
+height:300px;
+margin:10px;
+padding:50px;
+
+}
+#top{
+font-size:36px;
+border:1px solid blue;
+margin:10px;
+padding:10px;
+color:red;
+}
+#middle{
+font-size:24px;
+border:1px solid blue;
+margin:10px;
+padding:10px;
+}
+
+#bottom{
+font-size:12px;
+border:1px solid blue;
+margin:10px;
+padding:10px;
+}
+.name{
+font-weight:bold;
+color:blue;
+}
+</style>
+</head>
+<body>
+<div id="container">
+Hello Habib World
+
+		<div id="top">
+		This is the <span class="name"> TOP </span>of my web Page!
+		</div>
+		<div id="middle">
+		This is the <span class="name"> MIDDLE </span>of my web Page!
+		</div>
+		<div id="bottom">
+		This is the <span class="name"> BOTTOM </span>of my web Page!
+</div>
+</div>
+</body>
+</html>
