Some changes ocuure

--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> My Web page!Habib Abdo </title>
+<title> My Web page! </title>
 
 </head>
 <body>
+  Habib Abdo HEllo  Habib Abdo HEllo  Habib Abdo HEllo
 <img src="fam.jpg" width="300px" style="vertical-align:center;">
 
 <BR>
